--- a/QuanLyNhanKhau/src/views/PhatThuongManagerFrame/PTDacBietJrame.form
+++ b/QuanLyNhanKhau/src/views/PhatThuongManagerFrame/PTDacBietJrame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="0"/>
     <Property name="title" type="java.lang.String" value="Ph&#xe1;t th&#x1b0;&#x1edf;ng d&#x1ecb;p &#x111;&#x1eb7;c bi&#x1ec7;t"/>
@@ -211,7 +211,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value=" Danh s&#xe1;ch h&#x1ecd;c sinh nh&#x1ead;n th&#x1b0;&#x1edf;ng"/>
+            <Property name="text" type="java.lang.String" value=" Danh s&#xe1;ch h&#x1ecd;c sinh"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
